Apply max-height to images in term info widget to prevent overflow

--- a/css/VFBTermInfo.less
+++ b/css/VFBTermInfo.less
@@ -870,8 +870,12 @@
 	color: white;
 	clear: both;
 	max-width: 100%;
-    max-height: 260px;
     margin-left: 25px;
+}
+
+/* Apply max-height only to images inside the term info widget */
+#vfbterminfowidget .popup-image img {
+    max-height: 260px;
 }
 
 .popup-image img{
